--- a/application/modules/blog/views/scripts/index/index.phtml
+++ b/application/modules/blog/views/scripts/index/index.phtml
@@ -1,4 +1,35 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Index</b> and script/action name <b>index</b></p>
-</div>
+<table>
+<tr> 
+    <td>
+        <a href="<?php echo $this->baseUrl('/blog/index/blogpost');?>">Post a blog</a>   
+    </td>
+    <td>
+        <a href="<?php echo $this->baseUrl('/blog/index/logout');?>">Logout</a>   
+    </td> 
+</tr>    
+<tr>   
+    <td>
+        <label>Username</label>   
+    </td> 
+    <td>
+        <label>Title</label>   
+    </td>
+    <td>
+        <label>Body</label>   
+    </td>
+</tr>
+<?php
+foreach($this->allusers as $user) {
+   
+?>
+<tr>   
+    <td>
+        <a href="<?php echo $this->baseUrl('/blog/index/addcomment/blogid/'.$user['_id']);?>"><?php echo $user['user'];?></a>    
+    </td>
+    <td><?php echo $user['title'];?></td> 
+    <td><?php echo $user['body'];?></td> 
+</tr> 
+<?php
+}
+?>
+</table>
