committed blogshanty and blogbass modules

--- a/application/modules/blogbass/views/scripts/index/blogpost.phtml
+++ b/application/modules/blogbass/views/scripts/index/blogpost.phtml
@@ -1,24 +1,24 @@
 <table>
 <tr>
     <td>
-        <a href="<?php echo $this->baseUrl('/blog/index/');?>">Go to Homepage</a>         
+        <a href="<?php echo $this->baseUrl('/blogbass/index/');?>">Go to Homepage</a>         
     </td>     
-</tr>     
+</tr>    
 <form name="blogpostfrm" id="blogpostfrm" method="post" action="">
-<tr>
-    <td>
+<tr>    
+    <td>      
        <?php echo $this->blogPostForm->title;?>
-    </td>
+    </td> 
 </tr>
-<tr>
-    <td>
+<tr>    
+    <td>       
        <?php echo $this->blogPostForm->body;?> 
     </td> 
 </tr> 
-<tr>
+<tr>    
     <td>
        <?php echo $this->blogPostForm->tags;?>  
-    </td>
+    </td> 
 </tr>  
 <tr>    
     <td align="center">
