--- a/application/modules/blogshanty/views/scripts/index/signup.phtml
+++ b/application/modules/blogshanty/views/scripts/index/signup.phtml
@@ -1,25 +1,25 @@
 <table>
 <tr>
     <td>
-        <a href="<?php echo $this->baseUrl('/blog/index/');?>">Go to Homepage</a>
-        <a href="<?php echo $this->baseUrl('/blog/index/login/');?>">Login</a>
+        <a href="<?php echo $this->baseUrl('/blogshanty/index/');?>">Go to Homepage</a>
+        <a href="<?php echo $this->baseUrl('/blogshanty/index/login/');?>">Login</a>
     </td>     
-</tr>     
+</tr>    
 <form name="signupfrm" id="signupfrm" method="post" action="">    
-<tr>
-    <td>
+<tr>   
+    <td>   
        <?php echo $this->signUpForm->username;?>
-    </td>
+    </td> 
 </tr>
-<tr>
+<tr>    
     <td>
        <?php echo $this->signUpForm->email;?> 
-    </td>
+    </td> 
 </tr>
-<tr>
-     <td>
+<tr>    
+    <td>
        <?php echo $this->signUpForm->pass;?>
-    </td>
+    </td> 
 </tr> 
 <tr>    
     <td align="center">
