--- a/application/modules/blogshanty/views/scripts/index/login.phtml
+++ b/application/modules/blogshanty/views/scripts/index/login.phtml
@@ -1,20 +1,20 @@
 <table>
 <tr>
     <td>
-        <a href="<?php echo $this->baseUrl('/blog/index/');?>">Go to Homepage</a>        
-        <a href="<?php echo $this->baseUrl('/blog/index/signup/');?>">SignUp</a>    
+        <a href="<?php echo $this->baseUrl('/blogshanty/index/');?>">Go to Homepage</a>        
+        <a href="<?php echo $this->baseUrl('/blogshanty/index/signup/');?>">SignUp</a>    
     </td>     
-</tr> 
+</tr>  
 <form name="loginfrm" id="loginfrm" method="post" action="">
-<tr>
-    <td>
+<tr>    
+    <td>   
        <?php echo $this->loginForm->username;?>
-    </td>
+    </td> 
 </tr>
-<tr>
-    <td>
+<tr>    
+    <td>       
        <?php echo $this->loginForm->pass;?> 
-    </td>
+    </td> 
 </tr> 
 <?php 
 if($this->error_message) {
