--- a/application/modules/blogbass/views/scripts/index/index.phtml
+++ b/application/modules/blogbass/views/scripts/index/index.phtml
@@ -33,8 +33,8 @@ if($this->username) {
     </td>
 </tr>
 <?php
+if($this->allusers) {
 foreach($this->allusers as $user) {
-   
 ?>
 <tr>   
     <td>
@@ -43,6 +43,13 @@ foreach($this->allusers as $user) {
     <td><?php echo $user['title'];?></td> 
     <td><?php echo $user['body'];?></td> 
 </tr> 
+<?php
+}
+} else {
+?>
+<tr>
+    <td colspan="3">No Record Found.</td>
+</tr>
 <?php
 }
 ?>
